# fitness-room-system

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  MANUAL_USUARIO.md  Makefile  README.md  TESTING_MANUAL_DUENOS.md  WHATSAPP_UPDATE.md  setup.sh
.claude/: CLAUDE.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/scripts/: bootstrap_admin.py
backend/src/: __init__.py  config.py  main.py
backend/src/models/: __init__.py  catalog.py  checkin.py  class_model.py  common.py  instructor.py  inventory.py  membership.py  notification.py  reservation.py  student.py  transaction.py
backend/src/repositories/: __init__.py  catalog_repository.py  class_repository.py  dynamo_repository.py  instructor_repository.py  inventory_repository.py  membership_repository.py  notification_repository.py  reservation_repository.py  student_repository.py  transaction_repository.py
backend/src/routers/: __init__.py  catalogs.py  classes.py  email_admin.py  health.py  instructors.py  inventory.py  memberships.py  notifications.py  portal.py  reports.py  reservations.py  stats.py  students.py  transactions.py  users.py
backend/src/services/: __init__.py  carta_responsiva.py  checkin_service.py  class_service.py  cognito_service.py  email_templates.py  event_notifier.py  instructor_service.py  inventory_service.py  membership_service.py  notification_service.py  report_service.py  reservation_service.py  student_service.py  transaction_service.py  uniqueness_service.py
backend/src/utils/: __init__.py  auth.py  exceptions.py  phone.py
backend/tests/: __init__.py  conftest.py  test_checkin.py  test_classes.py  test_event_notifier.py  test_memberships.py  test_reservations.py  test_students.py
docs/: AI_CONTEXT.md  AUDIT_FINDINGS.md  RELEASE_CHECKLIST.md  REPO_MAP.md  ROADMAP.md  TROUBLESHOOTING.md  getting-started.md
frontend/: .env.example  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
gym-landing/: package.json  (+2 more)
(+245 files in other folders)
